version/0.12/_sources/api/ansys/geometry/core/_grpc/_services/base/edges/GRPCEdgesService.rst.txt






:class:`GRPCEdgesService`
=========================


.. py:class:: ansys.geometry.core._grpc._services.base.edges.GRPCEdgesService(channel: grpc.Channel)

   Bases: :py:obj:`abc.ABC`


   
   Edges service for gRPC communication with the Geometry server.


   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!














.. py:currentmodule:: GRPCEdgesService

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_edge`
            - Get edge.
          * - :py:attr:`~get_curve`
            - Get curve information for the edge.
          * - :py:attr:`~get_start_and_end_points`
            - Get start and end points for the edge.
          * - :py:attr:`~get_length`
            - Get the length of the edge.
          * - :py:attr:`~get_interval`
            - Get the interval of the edge.
          * - :py:attr:`~get_faces`
            - Get the faces that are connected to the edge.
          * - :py:attr:`~get_vertices`
            - Get the vertices that are connected to the edge.
          * - :py:attr:`~get_bounding_box`
            - Get the bounding box of the edge.
          * - :py:attr:`~extrude_edges`
            - Extrude edges.
          * - :py:attr:`~extrude_edges_up_to`
            - Extrude edges up to a face.
          * - :py:attr:`~move_imprint_edges`
            - Move imprint edges.
          * - :py:attr:`~offset_edges`
            - Offset edges.










Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.base.edges import GRPCEdgesService



Method detail
-------------

.. py:method:: get_edge(**kwargs) -> dict
   :abstractmethod:


   
   Get edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_curve(**kwargs) -> dict
   :abstractmethod:


   
   Get curve information for the edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_start_and_end_points(**kwargs) -> dict
   :abstractmethod:


   
   Get start and end points for the edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_length(**kwargs) -> dict
   :abstractmethod:


   
   Get the length of the edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_interval(**kwargs) -> dict
   :abstractmethod:


   
   Get the interval of the edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_faces(**kwargs) -> dict
   :abstractmethod:


   
   Get the faces that are connected to the edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_vertices(**kwargs) -> dict
   :abstractmethod:


   
   Get the vertices that are connected to the edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_bounding_box(**kwargs) -> dict
   :abstractmethod:


   
   Get the bounding box of the edge.
















   ..
       !! processed by numpydoc !!

.. py:method:: extrude_edges(**kwargs) -> dict
   :abstractmethod:


   
   Extrude edges.
















   ..
       !! processed by numpydoc !!

.. py:method:: extrude_edges_up_to(**kwargs) -> dict
   :abstractmethod:


   
   Extrude edges up to a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: move_imprint_edges(**kwargs) -> dict
   :abstractmethod:


   
   Move imprint edges.
















   ..
       !! processed by numpydoc !!

.. py:method:: offset_edges(**kwargs) -> dict
   :abstractmethod:


   
   Offset edges.
















   ..
       !! processed by numpydoc !!




